integration_tests/codegen_fail/fail/object/attr_field_non_output_return_type.rs
use juniper::{graphql_object, GraphQLInputObject};

#[derive(GraphQLInputObject)]
struct ObjB {
    id: i32,
}

struct ObjA;

#[graphql_object]
impl ObjA {
    fn id(&self) -> ObjB {
        ObjB { id: 34 }
    }
}

fn main() {}
